# Atlas

./: .dockerignore  .env.example  .env.local.example  .gitignore  CLAUDE.md  Dockerfile  README.md  audit_report.json  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  simple_dashboard.json  test_minio_adapter.py
.claude/: README.md  config
config/: .env.minio.example  config.yaml  sources.yaml
config/minio/: minio.env
docs/: README.md  documentation-system.md  minio_migration_report.md  workflow.md
docs/archive/: README.md
docs/archive/mvp-testing-reports/testing/: TASK-006-test-report.md  task-005-processor-test-report.md
docs/dev/: security-improvements-2025-12-26.md
docs/dev/claude-logs/: 2025-01-17-env-config-enhancement.md  2025-01-17-mvp-day1.md  2025-01-17-rss-sources-update.md  2025-01-17-ua-local-config.md  2025-01-17-user-agent-config.md  2025-01-20-TASK-003-completion.md  2025-01-20-TASK-004-completion.md  2025-01-20-TASK-006-completion.md  2025-01-20-TASK-007-completion.md  2025-01-20-TASK-008-completion.md
docs/dev/testing/: test-config-summary.md
docs/guidelines/: atlas_技术与合规实施准则.md  postgresql-setup-guide.md  redis-setup-guide.md  workflow.md
docs/project/: mvp-plan.md
docs/project/milestones/: current-sprint.md
docs/roadmap/: TASK-001-minio-integration.md  TASK-002-postgresql-migration.md  growth-development-plan.md  tasks-overview.md
docs/tasks/: current-backlog.md  mvp-backlog-archive.md
docs/tech/: architecture-decisions.md  architecture-questions.md  tech-architecture.md
docs/templates/: accumulative-template.md  dev-log-template.md  mutable-template.md
docs/testing/: TASK-001-minio-test-report.md  TASK-002-postgresql-migration-report.md  TASK-003-celery-test-report.md
docs/usage/: configuration-guide.md  deployment-guide.md  docker-deployment.md  env-configuration.md  installation-guide.md  minio-storage-guide.md  troubleshooting.md  user-manual.md
examples/: llm_integration_demo.py  system_integration_demo.py
scripts/: README.md  backup_storage.py  celery_manager.py  check_postgres_env.py  check_redis_env.py  cleanup_sqlite.py  cron_job.py  dashboard.py  db_view.py  dev.sh  init_auth_db.py  init_database.py  init_postgres_db.sh  init_redis.sh  migrate_to_minio.py  migrate_to_postgres.py  minio_server.py  monitor.py  pre-commit  run_tests.py  setup.sh  simple_monitor.py  start_minio.py  start_web.py  stop_web.py  verify_minio.sh
src/atlas/: __init__.py  __main__.py  cli.py
src/atlas/cli/: audit.py
src/atlas/collectors/: __init__.py  base.py  http_client.py  rate_limiter.py  rss_collector.py  web_collector.py
src/atlas/core/: __init__.py  config.py  database.py  database_async.py  logging.py  minio_adapter.py  operations.py  storage.py  unified_storage.py
src/atlas/llm/: __init__.py  adaptive_controller.py  factory.py  local_client.py  queue_manager.py  semantic_dedup.py
src/atlas/models/: __init__.py  documents.py  schema.py
src/atlas/monitoring/: performance.py
src/atlas/processors/: __init__.py  dedup_base.py  dedup_llm.py  normalizer.py  parser.py  validator.py
src/atlas/scheduler/: __init__.py  celery_app.py  celery_config.py  celery_tasks.py  cron_manager.py  queue.py  status.py
src/atlas/web/: app.py  fastapi_app.py  scheduler.py
src/atlas/web/api/v1/: auth.py  collections.py  sources.py
src/atlas/web/config/: settings.py
src/atlas/web/core/: security.py
src/atlas/web/dependencies/: auth.py
src/atlas/web/middleware/: error_handler.py
src/atlas/web/schemas/: auth.py  collections.py  sources.py
src/atlas/web/services/: collection_service.py  source_service.py
src/atlas/web/static/: style.css
src/atlas/web/utils/: response.py
src/core/: error_handler.py  resource_manager.py
src/monitoring/: __init__.py  alerts.py  health.py
tests/: conftest.py  test_basic.py  test_cli.py  test_collectors.py  test_config.py  test_database.py  test_llm.py  test_models.py  test_operations.py  test_processors.py  test_scheduler.py  test_storage.py  utils.py
tests/integration/: __init__.py  test_basic_integration.py  test_basic_sync.py  test_complete_pipeline.py  test_data_pipeline.py  test_database_storage_sync.py  test_stress_and_resilience.py  test_system_integration.py
tests/unit/: test_collectors.py  test_config.py  test_logging.py
tests/user_acceptance/: __init__.py  test_core_functionality.py  test_performance_requirements.py
